// 2017-12-11 Kristin Berry - Separated header and point into separate files. 

// Protocol buffer header descriptor for Isis3 Control Networks
package Isis;

message ControlNetFileHeaderV0002 {
//  Some fields of ControlNet
  required string networkId    = 1;
  required string targetName   = 2;
  optional string created      = 3;
  optional string lastModified = 4;
  optional string description  = 5;
  optional string userName     = 6;
  repeated int32  pointMessageSizes = 7 [packed = true];
}

